--- a/index.html
+++ b/index.html
@@ -37,6 +37,6 @@
             <i class="fa fa-envelope-open" aria-hidden="true"></i>
         </div>
     </div>
-    
+    <script src = 'app.js'></script>
 </body>
 </html>
