finished the home page

--- a/index.html
+++ b/index.html
@@ -12,28 +12,67 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body class="main-content">
-    <header class="section sec1 header active"></header>
+    <header class="section sec1 header active" id="home">
+        <div class="header-content">
+            <div class="left-header">
+                <div class="h-shape"></div>
+                <div class="image">
+                    <img src="img/msg480233019-227025.jpg" alt="">
+                </div>
+            </div>
+            <div class="right-header">
+                <h1 class="name">
+                    Hi I'm <span >Abdurahman Jafer</span>
+                    A web Developer
+                </h1>
+                <p>
+                    I'm a Web Developer intersted in Backend developing, I enjoy Coding with python using Django,
+                </p>
+                <div class="btn-con">
+                    <a href="" class="main-btn">
+                        <span class="btn-text">Download Cv</span>
+                        <span class="btn-icon"><i class="fa fa-download" aria-hidden="true"></i>
+                        </span>
+                    </a>
+                </div>
+            </div>
+        </div>
+
+    </header>
     <main>
         
-        <section class="section sec2 about"></section>
-        <section class="section sec3 Protfolio"></section>
-        <section class="section sec4 blogs"></section>
-        <section class="section sec5 contacts"></section>
+        <section class="section sec2 about" id="about">
+            <div class="main-title">
+                <h2>About <span>me</span> <span class="bg-text">My status</span></h2>
+            </div>
+            <div class="about-container">
+                <div class="left-about">
+                    <h4>Information About Me</h4>
+                    <p>
+                        Am senior student in Adama Science and Technology University majoring in computer science and eng
+                    </p>
+                </div>
+                <div class="right-about"></div>
+            </div>
+        </section>
+        <section class="section sec3 Protfolio" id="protfolio"></section>
+        <section class="section sec4 blogs" id="blogs"></section>
+        <section class="section sec5 contacts" id="contact"></section>
     </main>
     <div class="controls">
-        <div class="control control-1 active-btn">
+        <div class="control control-1 active-btn" data-id="home">
             <i class="fa fa-home" aria-hidden="true"></i>
         </div>
-        <div class="control control-2 ">
+        <div class="control control-2 " data-id="about">
             <i class="fa fa-user" aria-hidden="true"></i>
         </div>
-        <div class="control control-3 ">
+        <div class="control control-3 " data-id="portfolio">
             <i class="fa fa-briefcase" aria-hidden="true"></i>
         </div>
-        <div class="control control-4 ">
+        <div class="control control-4 " data-id="blogs">
             <i class="fa fa-newspaper" aria-hidden="true"></i>
         </div>
-        <div class="control control-5 ">
+        <div class="control control-5 " data-id="contact">
             <i class="fa fa-envelope-open" aria-hidden="true"></i>
         </div>
     </div>
