--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>Protfolio</title>
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:ital@1&display=swap" rel="stylesheet"> 
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body class="main-content">
     <header class="section sec1 header active" id="home">
@@ -49,15 +49,215 @@
                 <div class="left-about">
                     <h4>Information About Me</h4>
                     <p>
-                        Am senior student in Adama Science and Technology University majoring in computer science and eng
+                        Am senior student in Adama Science and Technology University majoring in computer science and engineering(cse)
+                        I have been developing since 2021 and i have since worked on many private projects for the private sector 
                     </p>
+                    <div class="btn-con">
+                        <a href="" class="main-btn">
+                            <span class="btn-text">Download Cv</span>
+                            <span class="btn-icon"><i class="fa fa-download" aria-hidden="true"></i>
+                            </span>
+                        </a>
+                    </div>
                 </div>
-                <div class="right-about"></div>
+                <div class="right-about">
+                    <div class="about-item">
+                        <div class="abt-text">
+                            <p class="large-text">7+</p>
+                            <p class="small-text">PROJECTS <br/> COMPLETED</p>
+                        </div>
+                    </div>
+                    <div class="about-item">
+                        <div class="abt-text">
+                            <p class="large-text">2+</p>
+                            <p class="small-text">Years <br/> OF EXPERIENCE</p>
+                        </div>
+                    </div>
+                    <div class="about-item">
+                        <div class="abt-text">
+                            <p class="large-text">5+</p>
+                            <p class="small-text">HAPPY <br/> CLIENT</p>
+                        </div>
+                    </div>
+                    <div class="about-item">
+                        <div class="abt-text">
+                            <p class="large-text">8+</p>
+                            <p class="small-text">CUSTOMER <br/> REVIEWS</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="about-status">
+                <h4 class="stat-title">MY Skills</h4>
+                <div class="progress-bars">
+                    <div class="progress-bar">
+                        <p class="prog-title"> html5</p>
+                        <div class="progress-con">
+                            <p class="prog-text">90%</p>
+                            <div class="progress">
+                                <span class="html"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="progress-bar">
+                        <p class="prog-title"> Css</p>
+                        <div class="progress-con">
+                            <p class="prog-text">85%</p>
+                            <div class="progress">
+                                <span class="css"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="progress-bar">
+                        <p class="prog-title"> Javascript</p>
+                        <div class="progress-con">
+                            <p class="prog-text">75%</p>
+                            <div class="progress">
+                                <span class="js"></span>
+                            </div>
+                        </div>
+                    </div> 
+                    <div class="progress-bar">
+                        <p class="prog-title"> Python</p>
+                        <div class="progress-con">
+                            <p class="prog-text">95%</p>
+                            <div class="progress">
+                                <span class="python"></span>
+                            </div>
+                        </div>
+                    </div> 
+                    <div class="progress-bar">
+                        <p class="prog-title"> C++</p>
+                        <div class="progress-con">
+                            <p class="prog-text">80%</p>
+                            <div class="progress">
+                                <span class="c"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="progress-bar">
+                        <p class="prog-title"> Express JS</p>
+                        <div class="progress-con">
+                            <p class="prog-text">55%</p>
+                            <div class="progress">
+                                <span class="express"></span>
+                            </div>
+                        </div>
+                    </div>  
+                </div>
+            </div>
+            <h4 class="stat-title">My Timeline</h4>
+            <div class="timeline">
+                <div class="timeline-item">
+                    <div class="tl-icon">
+                        <i class="fa fa-briefcase" aria-hidden="true"></i>
+                    </div>
+                    <p class="tl-duration">2021-2022</p>
+                    <h5>Web Developer <span> -Freelance</span></h5>
+                    <p>
+                        Freelancing on WeWork and freelance.com for almost a year, Mostly on Bacnkend Developing
+                    </p>
+
+                </div>
+                <div class="timeline-item">
+                    <div class="tl-icon">
+                        <i class="fa fa-briefcase" aria-hidden="true"></i>
+                    </div>
+                    <p class="tl-duration">2022-Present</p>
+                    <h5>Web Developer <span> -Skylinkict</span></h5>
+                    <p>
+                        Developing web apps For Skylinkict pariatilly 
+                    </p>
+
+                </div>
             </div>
         </section>
-        <section class="section sec3 Protfolio" id="protfolio"></section>
+        <section class="section sec3 Protfolio" id="protfolio">
+            <div class="main-title">
+                <h2>My <span>Protfolio</span> <span class="bg-text">My Work</span></h2>
+            </div>
+            <p class="prot-text">
+                Here is Some of my Work
+            </p>
+            <div class="protfolios">
+                <div class="portfolio-item">
+                    <div class="image">
+                        <img src="img/desk.jpg" alt="">
+                    </div>
+                    <div class="hover-item">
+                        <h3>Project Source </h3>
+                        <div class="icons">
+                            <a href="https://github.com/its0beno/Protofilo" target="_blank" class="icon">
+                                <i class="fa fa-code" aria-hidden="true"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-item">
+                    <div class="image">
+                        <img src="img/index.png" alt="">
+                    </div>
+                    <div class="hover-item">
+                        <h3>Project Source </h3>
+                        <div class="icons">
+                            <a href="https://github.com/its0beno/hms-" target="_blank" class="icon">
+                                <i class="fa fa-code" aria-hidden="true"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-item">
+                    <div class="image">
+                        <img src="img/code.jpg" alt="">
+                    </div>
+                    <div class="hover-item">
+                        <h3>Project Source </h3>
+                        <div class="icons">
+                            <a href="https://github.com/its0beno/rental-System" target="_blank" class="icon">
+                                <i class="fa fa-code" aria-hidden="true"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="section sec4 blogs" id="blogs"></section>
-        <section class="section sec5 contacts" id="contact"></section>
+        <section class="section sec5 contacts" id="contact">
+            <div class="contact-container">
+                <div class="main-title">
+                    <h2>Contact <span>Me</span> <span class="bg-text">Now</span></h2>
+                </div>
+                <div class="contact-content-con">
+                    <div class="left-contact">
+                        <h4>Contact me here</h4>
+                        <p>
+                            Abdurahman Jafer
+                        </p>
+                        <div class="contact-info">
+                            <div class="contact-item">
+                                <div class="icon">
+                                    <i class="fa fa-map-marker" aria-hidden="true"></i>
+                                    Location
+                                </div>
+                            </div>
+                            <div class="contact-item">
+                                <div class="icon">
+                                    <i class="fa fa-map-marker" aria-hidden="true"></i>
+                                    Location
+                                </div>
+                            </div>
+                            <div class="contact-item">
+                                <div class="icon">
+                                    <i class="fa fa-map-marker" aria-hidden="true"></i>
+                                    Location
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="right-contact"></div>
+                </div>
+            </div>
+        </section>
     </main>
     <div class="controls">
         <div class="control control-1 active-btn" data-id="home">
@@ -66,7 +266,7 @@
         <div class="control control-2 " data-id="about">
             <i class="fa fa-user" aria-hidden="true"></i>
         </div>
-        <div class="control control-3 " data-id="portfolio">
+        <div class="control control-3 " data-id="protfolio">
             <i class="fa fa-briefcase" aria-hidden="true"></i>
         </div>
         <div class="control control-4 " data-id="blogs">
