--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Protfolio</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -239,22 +240,82 @@
                                     <i class="fa fa-map-marker" aria-hidden="true"></i>
                                     Location
                                 </div>
+                                <p>
+                                    :Addis ababa, Ethiopia
+                                </p>
                             </div>
                             <div class="contact-item">
                                 <div class="icon">
-                                    <i class="fa fa-map-marker" aria-hidden="true"></i>
-                                    Location
+                                    <i class="fa fa-phone" aria-hidden="true"></i>
+                                    Phone Number
                                 </div>
+                                <p>
+                                    :0988174455
+                                </p>
                             </div>
                             <div class="contact-item">
                                 <div class="icon">
-                                    <i class="fa fa-map-marker" aria-hidden="true"></i>
-                                    Location
+                                    <i class="fa fa-whatsapp" aria-hidden="true"></i>
+                                    Whatsapp
                                 </div>
+                                <p>
+                                    :+251988174455
+                                </p>
+                            </div>
+                            <div class="contact-item">
+                                <div class="icon">
+                                    <i class="fa fa-envelope" aria-hidden="true"></i>
+                                    Email
+                                </div>
+                                <p>
+                                    :boodebeno@gmail.com
+                                </p>
+                            </div>
+                        </div>
+                        <div class="contact-icons">
+                            <div class="contact-icon">
+                                <a href="www.facebook.com" target="_blank">
+                                    <i class="fa fa-envelope" aria-hidden="true"></i>
+                                </a>
+                            </div>
+                            <div class="contact-icon">
+                                <a href="www.facebook.com" target="_blank">
+                                    <i class="fa fa-envelope" aria-hidden="true"></i>
+                                </a>
+                            </div>
+                            <div class="contact-icon">
+                                <a href="www.facebook.com" target="_blank">
+                                    <i class="fa fa-envelope" aria-hidden="true"></i>
+                                </a>
+                            </div>
+                            <div class="contact-icon">
+                                <a href="www.facebook.com" target="_blank">
+                                    <i class="fa fa-envelope" aria-hidden="true"></i>
+                                </a>
                             </div>
                         </div>
                     </div>
-                    <div class="right-contact"></div>
+                    <div class="right-contact">
+                        <form action="" class="contact-form">
+                            <div class="input-control ic2">
+                                <input type="text"  required placeholder="YOUR NAME">
+                                <input type="email"  required placeholder="YOUR EMAIL">
+                            </div>
+                            <div class="input-control">
+                                <input type="text" required placeholder="ENTER SUBJECT">
+                            </div>
+                            <div class="input-control">
+                                <textarea name="" id="" cols="15" rows="8" placeholder="Messeage Here..."></textarea>
+                            </div>
+                            <div class="submit-btn">
+                                <a href="" class="main-btn">
+                                    <span class="btn-text">Send</span>
+                                    <span class="btn-icon"><i class="fa fa-download" aria-hidden="true"></i>
+                                    </span>
+                                </a>
+                            </div>
+                        </form>
+                    </div>
                 </div>
             </div>
         </section>
