--- a/index.html
+++ b/index.html
@@ -304,7 +304,8 @@
                             <div class="submit-btn">
                                 <a href="" class="main-btn" target="_blank">
                                     <span class="btn-text">Send</span>
-                                    <span class="btn-icon"><i class="fa-solid fa-reply"></i>
+                                    <img src="img/send.png" alt="">
+                                    <!-- <span class="btn-icon"><i class="fa-solid fa-reply"></i> -->
                                     </span>
                                 </a>
                             </div>
@@ -334,3 +335,4 @@
     <script src = 'app.js'></script>
 </body>
 </html>
+65bebc
