made the website phone friendly

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             </div>
             <div class="right-header">
                 <h1 class="name">
-                    Hi I'm <span >Abdurahman Jafer</span>
-                    A web Developer
+                    Hello my name is <span >Abdurahman Jafer</span>
+                    I'm a web Developer
                 </h1>
                 <p>
                     I'm a Web Developer intersted in Backend developing, I enjoy Coding with python using Django,
@@ -183,7 +183,7 @@
             <div class="protfolios">
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/desk.jpg" alt="">
+                        <img src="img/desktop.jpg" alt="">
                     </div>
                     <div class="hover-item">
                         <h3>Project Source </h3>
@@ -225,7 +225,7 @@
         <section class="section sec5 contacts" id="contact">
             <div class="contact-container">
                 <div class="main-title">
-                    <h2>Contact <span>Me</span> <span class="bg-text">Now</span></h2>
+                    <h2>Contact <span>Me</span> <span class="bg-text">Get in touch</span></h2>
                 </div>
                 <div class="contact-content-con">
                     <div class="left-contact">
@@ -236,7 +236,7 @@
                         <div class="contact-info">
                             <div class="contact-item">
                                 <div class="icon">
-                                    <i class="fa fa-map-marker" aria-hidden="true"></i>
+                                    <i class="fa-solid fa-location-dot"></i>
                                     Location
                                 </div>
                                 <p>
@@ -245,7 +245,7 @@
                             </div>
                             <div class="contact-item">
                                 <div class="icon">
-                                    <i class="fa fa-phone" aria-hidden="true"></i>
+                                    <i class="fa-solid fa-phone"></i>
                                     Phone Number
                                 </div>
                                 <p>
@@ -302,10 +302,9 @@
                                 <textarea name="" id="" cols="15" rows="8" placeholder="Messeage Here..."></textarea>
                             </div>
                             <div class="submit-btn">
-                                <a href="" class="main-btn" target="_blank">
+                                <a href="" class="main-btn" target="">
                                     <span class="btn-text">Send</span>
-                                    <img src="img/send.png" alt="">
-                                    <!-- <span class="btn-icon"><i class="fa-solid fa-reply"></i> -->
+                                    <span class="btn-icon"><i class="fa-solid fa-paper-plane"></i>
                                     </span>
                                 </a>
                             </div>
